# PrismEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  format.md  imgui.ini  pack_release.bat  pack_release.py
3rdlibs/: CMakeLists.txt
3rdlibs/entt/: CMakeLists.txt
3rdlibs/glad/include/glad/: glad.h
3rdlibs/glad/src/: glad.c
assets/shaders/: flat_color.glsl  shader.glsl  texture.glsl
editor/: CMakeLists.txt  cube.toml  example.toml  imgui.ini
editor/src/: editor_app.cpp  editor_layer.cpp  editor_layer.hpp  particle_system.cpp  particle_system.hpp
editor/src/panel/: scene_hierarchy_panel.cpp  scene_hierarchy_panel.hpp  welcome_panel.hpp
prism/: CMakeLists.txt
prism/include/: pch.hpp  prism.hpp
prism/include/application/: application.hpp  layer.hpp
prism/include/core/: application.hpp  assert.hpp  core.hpp  layer.hpp  log_tag.hpp  logger.hpp  random.hpp  timestep.hpp
prism/include/core/event/: application_event.hpp  event.hpp  key_event.hpp  mouse_event.hpp
prism/include/core/math/: math.hpp
prism/include/core/window/: input.hpp  window.hpp
prism/include/debug/: instrumentor.hpp
prism/include/event/: application_event.hpp  event.hpp  key_event.hpp  mouse_event.hpp
prism/include/imgui/: imgui_layer.hpp  palette.hpp
prism/include/platform/OpenGL/: ImGuiGLFW.hpp  ImGuiOpenGLRenderer.hpp  opengl_buffer.hpp  opengl_context.hpp  opengl_frame_buffer.hpp  opengl_renderer_api.hpp  opengl_shader.hpp  opengl_texture.hpp  opengl_vertex_array.hpp
prism/include/platform/Windows/: windows_input.hpp  windows_window.hpp
prism/include/renderer/: buffer.hpp  camera.hpp  frame_buffer.hpp  graphics_context.hpp  orthographic_camera_controller.hpp  render_command.hpp  renderer.hpp  renderer2d.hpp  renderer_api.hpp  shader.hpp  subtexture2d.hpp  texture.hpp  vertex_array.hpp
prism/include/scene/: components.hpp  entity.hpp  scene.hpp  scene_camera.hpp  scene_serializer.hpp  scriptable_entity.hpp
prism/include/utils/: platform_utils.hpp
prism/include/window/: keycodes.hpp  window.hpp
prism/src/: prism.cpp
prism/src/application/: application.cpp  layer.cpp
prism/src/core/: application.cpp  layer.cpp  logger.cpp  random.cpp
prism/src/core/math/: math.cpp
prism/src/imgui/: imgui_layer.cpp
prism/src/platform/OpenGL/: ImGuiGLFW.cpp  ImGuiOpenGLRenderer.cpp  opengl_buffer.cpp  opengl_context.cpp  opengl_frame_buffer.cpp  opengl_renderer_api.cpp  opengl_shader.cpp  opengl_texture.cpp  opengl_vertex_array.cpp
prism/src/platform/Windows/: windows_input.cpp  windows_platform_utils.cpp  windows_window.cpp
prism/src/renderer/: buffer.cpp  camera.cpp  frame_buffer.cpp  orthographic_camera_controller.cpp  render_command.cpp  renderer.cpp  renderer2d.cpp  renderer_api.cpp  shader.cpp  subtexture2d.cpp  texture.cpp  vertex_array.cpp
prism/src/scene/: entity.cpp  scene.cpp  scene_camera.cpp  scene_serializer.cpp
release/: cube.toml
sandbox/: CMakeLists.txt  particle_system.cpp  particle_system.hpp  sandbox.cpp  sandbox2d.cpp  sandbox2d.hpp
test/: CMakeLists.txt
test/assert/: assert.cpp  todo.cpp
test/log/: logger.cpp
test/serialize/: serialize.cpp
